// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Card component should handle more-btn click 1`] = `
<div
  className="card__hovered"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="overlay__active"
  />
  <img
    alt="Poster!"
    className="poster__active"
    src="/assets/images/41k5ka3zAML.jpg"
  />
  <span
    className="overview"
  >
    Right after the sudden death of her mother—her first and most devoted fan—and just before the launch of her high-stakes sophomore album, Greta James falls apart on stage. The footage quickly goes viral and she stops playing, her career suddenly in jeopardy—the kind of jeopardy her father, Conrad, has always predicted; the kind he warned her about when he urged her to make more practical choices with her life.
  </span>
</div>
`;

exports[`test Card component should handle toggleHover 1`] = `
<div
  className="card__hovered"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="overlay"
  />
  <img
    alt="Poster!"
    className="poster"
    src="/assets/images/41k5ka3zAML.jpg"
  />
  <button
    className="more-btn"
    onClick={[Function]}
  >
    overview
  </button>
  <div
    className="card-details"
  >
    <span
      className="card-title"
    >
      The Unsinkable Greta James The Unsinkable Greta James The Unsinkable Greta James
    </span>
    <span
      className="card-author"
    >
      Jennifer E. Smith
    </span>
    <RatingBar
      vote_average={4.3}
    />
    <span
      className="card-price"
    >
      $ 15.59
    </span>
  </div>
</div>
`;

exports[`test Card component should render Card component 1`] = `
<div
  className="card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="overlay"
  />
  <img
    alt="Poster!"
    className="poster"
    src="/assets/images/41k5ka3zAML.jpg"
  />
  <div
    className="card-details"
  >
    <span
      className="card-title"
    >
      The Unsinkable Greta James The Unsinkable Greta James The Unsinkable Greta James
    </span>
    <span
      className="card-author"
    >
      Jennifer E. Smith
    </span>
    <RatingBar
      vote_average={4.3}
    />
    <span
      className="card-price"
    >
      $ 15.59
    </span>
  </div>
</div>
`;
